--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1298,5 +1298,11 @@ body {
             color: #ff1493;
         }
 
+.timestamp{
+    color: white;
+    font-weight: bold;
+    font-size: medium;
+    text-align: center;
+}
 
  
